--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -23,7 +23,7 @@
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text='@{viewModel.isTimerActive ? "Inactivate" : "Activate"}' />
+            android:text='@{viewModel.isTimerActive ? "inactivate" : "activate"}' />
 
     </LinearLayout>
 </layout>
